[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Movement.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/ScreenWrap.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/HitGround.wav" type="AudioStream" id=5]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.90735e-06, 1.90735e-06 )
scale = Vector2( 3.2, 3.2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ScreenWrap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="HitGround" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
